# rsql

./: .gitignore  Cargo.toml  README.md  WEBSOCKET_PROXY_ARCHITECTURE.md  package-lock.json
benches/: perf.rs
client/: README.md  TABLES.json  Users.json  index.html  package-lock.json  package.json  vite.config.js
client/public/: DEFAULT_TABLE.json  LongTableExample.json  MEMBERS.json  TABLES.json  Users.json
client/src/: App.vue
client/src/components/: CreateTable.vue  DataTable.vue  DatabasePage.vue  DropTableModal.vue  Icon.vue  InsertData.vue  List.vue  Login.vue  RenameTableModal.vue  Sidebar.vue  SqlEditor.vue  Terminal.vue  Toast.vue  Topbar.vue
client/src/router/: index.js
client/src/services/: sessionService.js  wsService.js
client/src/views/: COPY.vue  DatabasePage.vue  List.vue
docs/: SQL Notebook.md  SQL_Notebook.md  example.md  sql_supports.md  websocket.md  前后端部署说明.md
src/: config.rs  daemon.rs  init.rs  lib.rs  main.rs  utils.rs  web_server.rs
src/catalog/: mod.rs  sys_catalog.rs  table_schema.rs
src/common/: conn.rs  data_item.rs  error.rs  mod.rs  result.rs
src/db/: common.rs  data_item.rs  errors.rs  executor.rs  mod.rs  parser.rs  storage.rs  system_catalog.rs  table.rs  table_schema.rs  tnx_manager.rs  utils.rs
src/db/btree_index/: btree_index.rs  btree_node.rs  mod.rs
src/db/executor/: executor.rs  expr_handler.rs  mod.rs  (+1 more)
src/execution/: dcl_interpreter.rs  ddl_interpreter.rs  dml_interpreter.rs  executor.rs  expr_handler.rs  expr_interpreter.rs  handler.rs  mod.rs  result.rs
src/server/: conncetion_user_map.rs  daemon.rs  mod.rs  server.rs  sqlserver_actor.rs  thread_pool.rs  types.rs  web_server.rs  websocket_actor.rs
src/sql/: plan.rs  utils.rs
src/storage/: archiver.rs  consist_storage.rs  mod.rs  table.rs
src/transaction/: manager.rs  mod.rs
(+57 files in other folders)
