[package]
name = "rsql"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
serde = {version = "1.0.228", features = ["derive"]}
crc32fast = "1.5.0"
sqlparser = "0.60"
linked-hash-map = "0.5.6"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "registry"] }
rayon = "1.11.0"
futures = "0.3.31"
num_cpus = "1.17.0"
thiserror = "1.0"
actix-web-actors = "4.3.1"
actix = "0.13.5"
tokio = { version = "1.49.0", features = ["process"]}
serde_json = "1.0.149"
rand = "0.9.2"
bcrypt = "0.18.0"
ctrlc = "3.5.1"

[dev-dependencies]
serial_test = "3.3.1"
tempfile = "3.24.0"
